--- a/src/schemas/presentationActions.yaml
+++ b/src/schemas/presentationActions.yaml
@@ -19,10 +19,6 @@ properties:
       resourceId:
         type: string
         description: ID of the screen resource to display
-      resourceType:
-        type: string
-        description: Type of the screen resource
-        enum: [layout]
     additionalProperties: false
 
   background:
@@ -32,10 +28,6 @@ properties:
       resourceId:
         type: string
         description: ID of the background resource to display
-      resourceType:
-        type: string
-        description: Type of the background resource
-        enum: [image, layout]
       animations:
         type: object
         description: Animation effects for background transitions
@@ -77,7 +69,7 @@ properties:
     type: object
     description: Dialogue display configuration
     properties:
-      layoutId:
+      resourceId:
         type: string
         description: ID of the dialogue box UI element
       content:
@@ -137,9 +129,6 @@ properties:
             resourceId:
               type: string
               description: ID of the resource
-            resourceType:
-              type: string
-              description: Type of the resource
             transformId:
               type: string
               description: ID of the transform where visual appears
@@ -186,7 +175,7 @@ properties:
     type: object
     description: Choice system configuration
     properties:
-      layoutId:
+      resourceId:
         type: string
         description: ID of the choice layout UI element
       items:
@@ -217,10 +206,10 @@ properties:
             id:
               type: string
               description: Unique identifier for the sound effect
-            soundId:
+            resourceId:
               type: string
               description: ID of the sound effect resource
-          required: [id, soundId]
+          required: [id, resourceId]
           additionalProperties: false
     additionalProperties: false
 
@@ -228,16 +217,17 @@ properties:
     type: object
     description: Background music configuration
     properties:
-      soundId:
+      resourceId:
         type: string
         description: ID of the background music resource
     additionalProperties: false
 
+  # TODO: check if can make this more generalized
   layout:
     type: object
     description: Layout configuration for UI layouts
     properties:
-      layoutId:
+      resourceIdId:
         type: string
         description: ID of the layout to display
     additionalProperties: false
